Bumped up Version to v.0.4.7 and added Bearer Authentication
